# football-prediction-pipeline

./: .gitignore  Dockerfile  README.md  cronjob.yaml  main.py  pyproject.toml
src/: collector.py  cronjob.yaml  eda.py  fetch_2022.py  kaggledata.py  loader.py  predict.py  predict_tomorrow.py  preprocess.py  train.py  transformer.py
